--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="prev">Prev</string>
     <string name="next">Next</string>
     <string name="gallery_title">Gallery</string>
+    <string name="upload_failed">Upload failed: %1$s</string>
 </resources>
