--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="next">Next</string>
     <string name="gallery_title">Gallery</string>
     <string name="upload_failed">Upload failed: %1$s</string>
+    <string name="gallery_empty">No photos found yet.</string>
+    <string name="occasion_gallery_title">Occasion gallery \u2013 %1$s</string>
+    <string name="occasion_gallery_error">Could not load occasion photos: %1$s</string>
 </resources>
